PR/27140: "sleep time" doesn't error out. Apply fix from Dheeraj Reddy.